# Sensor_Fusion

./: .gitignore  LICENSE.md  README.md  code_of_conduct.md  contribution.md
install/: local_setup.sh  setup.sh
install/gps_odometry/lib/gps_odometry/: gps_odometry_node
install/gps_odometry/share/gps_odometry/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/imu_odometry/share/imu_odometry/: package.bash  package.dsv  package.ps1  package.sh  (+1 more)
log/: latest_build
src/: README.md
src/gps_odometry/: setup.py
src/imu_odometry/: package.xml  setup.py
src/imu_odometry/imu_odometry/: analyze_imu.py  imu_bias_calibration.py  imu_odometry_xsens.py  pure_imu_odometry.csv
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/config/: urdf_config.rviz
src/my_robot_description/launch/: Drwig_display.launch .py  display.launch.xml
src/robot_localization_fusion/: setup.cfg  setup.py
src/robot_localization_fusion/config/: ekf_localization.yaml
src/robot_localization_fusion/launch/: localization.py
src/robot_localization_fusion/robot_localization_fusion/: wheel_odometry.py
src/sensor_fusion_localization/: CMakeLists.txt  package.xml
src/sensor_fusion_localization/config/: ekf _global.yaml  ekf.yaml  ekf_local.yaml  navsat.yaml  navsat_dual_ekf.yaml
src/sensor_fusion_localization/launch/: dual_ekf_launch.py  ekf_navsat.launch.py
src/sensor_fusion_localization/scripts/: imu_covariance_fixer.py
src/xsens_mti_ros2_driver/: README.txt
src/xsens_mti_ros2_driver/param/: xsens_mti_node.yaml
(+102 files in other folders)
